--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Time, Space, Complexity</h1>
+	<p>Time complexity is required for effective and efficient ways.</p>
+	<p><b>Space Complexity</b> should be O(n)</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
